<resources>
    <string name="app_name">Converter</string>
    <string name="conversion">Conversion</string>
    <string name="converter">Converter</string>
    <string name="currency">currency</string>
    <string name="length">length</string>
    <string name="mass">mass</string>
    <string name="not_work">The Internet doesn\'t work!</string>
    <string name="ok">OK</string>
    <string name="turn_on">Turn it on</string>
    <string name="type">Type any value…</string>

    <string-array name="length">
        <item>Millimeter</item>
        <item>Centimeter</item>
        <item>Inch</item>
        <item>Foot/Feet</item>
        <item>Yard</item>
        <item>Meter</item>
        <item>Kilometer</item>
        <item>Mile</item>
    </string-array>
    <string-array name="mass">
        <item>Gram</item>
        <item>Ounce</item>
        <item>Pound</item>
        <item>Kilogram</item>
        <item>Tonne</item>
    </string-array>
</resources>
