<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTheme"
    android:orientation="vertical"
    tools:context="com.example.saint.convertproject.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorToolbar"
        android:theme="@style/ToolbarColoredBackArrow"
        app:popupTheme="@style/AppTheme"
        app:titleTextColor="@color/colorLightText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:orientation="vertical"
        android:padding="@dimen/menu_padding">

        <Button
            android:id="@+id/buttonLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_bottom_margin"
            android:background="@drawable/button_all"
            android:text="@string/length" />

        <Button
            android:id="@+id/buttonMass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_bottom_margin"
            android:background="@drawable/button_all"
            android:text="@string/mass" />

        <Button
            android:id="@+id/buttonCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_bottom_margin"
            android:background="@drawable/button_all"
            android:text="@string/currency" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />
    </LinearLayout>


</LinearLayout>
